# social-media-automation

./: .dockerignore  .env.example  .env.vercel.example  .gitignore  .vercelignore  Dockerfile  README-VERCEL.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.streamlit/: config.toml
api/: index.py
config/: canva.example.yaml  canva.yaml  categories.example.yaml  categories.yaml  schedule.yaml  vision_brand.yaml
docker/: dispatch-loop.sh  entrypoint.sh  nginx.conf
docs/: 01-visione-e-architettura-target.md  02-analisi-gap-architettura-attuale.md  03-postgres-schema-e-migrazione.md  04-storage-media-blob.md  05-secrets-e-variabili-ambiente.md  06-vercel-deploy-e-configurazione.md  07-cron-dispatch-meta.md  08-batch-ai-e-job-queue.md  09-oauth-e-autenticazione.md  10-roadmap-milestone.md  11-decisioni-architetturali.md  12-checklist-go-live.md  README.md  cli-comandi.md  docker.md  instagram_graph_api_scheduler_notes.md  meta-setup.md  migrazione-fe-react.md  progetto-completo.md  story-ai-assistant-gpt.md  visual-producer-gpt-parity.md
frontend/: package-lock.json  package.json
scripts/: convert_postgres_store.py  dispatch_scheduled.sh  docker-init.sh  gen_meta_oauth_mkcert.sh  generate_postgres_store.py  generate_vercel_env.py  migrate_sqlite_to_postgres.py  smoke-e2e.sh  upload_output_to_blob.py
tests/: conftest.py  db_test_helpers.py  test_api.py  test_api_batches.py  test_api_dispatch.py  test_api_images.py  test_api_integration.py  test_api_plans.py  test_app_timezone.py  test_batch_queue.py  test_batch_revised_prompt_log.py  (+39 more)
(+151 files in other folders)
