[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-media-automation"
version = "0.1.0"
description = "Pipeline: Drive → Story AI → validazione → pianificazione IG/FB (UI React + FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<0.137.0",
    "starlette>=0.46.0,<1.3.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.1.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "psycopg[binary,pool]>=3.2.0",
]

[project.scripts]
social-automation = "social_automation.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]
ui = [
    "streamlit>=1.37.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/social_automation"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
